fix: align content spacing for floating header pages

--- a/src/widgets/MainPageLayout/ui/MainPageLayout.module.scss
+++ b/src/widgets/MainPageLayout/ui/MainPageLayout.module.scss
@@ -4,6 +4,16 @@
     min-height: 100vh;
 }
 
+.floating {
+    padding-top: 100px;
+}
+
 .content {
     flex: 1;
+}
+
+@media (max-width: 992px) {
+    .floating {
+        padding-top: 0;
+    }
 }
